Downloaded and transformed data for 3 cities. Uploaded as 3 separate .csv files: clear data, outliers, stations for each city. Outlier rule: duration 24 h -> bike was stolen - business rules.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 !*_clear_rides_data.csv
 !*_duration_outliers-stolen_bikes.csv
 !*_stations.csv
+bergen_clear_rides_data.csv
+oslo_clear_rides_data.csv
 
 *.DS_Store
 
